--- a/teacher-ch.html
+++ b/teacher-ch.html
@@ -199,8 +199,10 @@
                 <div class="row">
                     <div class="col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">联系我们</h5>
-                        <p><i class="fa fa-envelope mr-2"></i>contact@interviewinenglish.com</p>
-                        <div class="d-flex justify-content-start mt-4">
+                        <p>
+                            <i class="fa fa-envelope mr-2"></i>
+                            <a href="mailto:contact@interviewinenglish.com" style="color: white;">contact@interviewinenglish.com</a>
+                        </p>                        <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-square mr-2" target="_blank"
                                 href="https://x.com/interviewtutor"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-square mr-2" target="_blank"
